minor css changes to allow for horizontal view on smartphone

--- a/css/style.css
+++ b/css/style.css
@@ -207,17 +207,17 @@ img:hover {
 }
 
 #contact-container {
-  height: 100%;
   width: 100%;
   background-image: url("../assets/biggie.jpg");
   background-size: cover;
   position:relative;
+  min-height: 300px;
 }
 
 #contact-container-mask {
-  height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  min-height: 300px;
 }
 
 #contact {
@@ -225,7 +225,7 @@ img:hover {
   margin-right: auto;
   width: 45%;
   text-align: center;
-  padding-top: 20%;
+  padding: 20%;
 }
 
 #contact a{
