minor change to padding of contact

--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,11 @@ i:hover {
     padding-bottom: 20px;
   }
 
+  #content {
+    padding-right: 10%;
+    padding-left: 10%;
+  }
+
 }
 
 @media (max-width: 800px) {
